Camera App/debug-scans/logs.txt
Call Stack
  construct (<native>)
  apply (<native>)
  _construct (node_modules\@babel\runtime\helpers\construct.js)
  Wrapper (node_modules\@babel\runtime\helpers\wrapNativeSuper.js)
  construct (<native>)
  _callSuper (node_modules\@babel\runtime\helpers\callSuper.js)
  NamelessError (node_modules\@expo\metro-runtime\src\metroServerLogs.native.ts)
  captureCurrentStack (node_modules\@expo\metro-runtime\src\metroServerLogs.native.ts)
  HMRClient.log (node_modules\@expo\metro-runtime\src\metroServerLogs.native.ts)
  console.level (node_modules\react-native\Libraries\Core\setUpDeveloperTools.js)
  createTextInstance (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  completeWork (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  runWithFiberInDEV (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  completeUnitOfWork (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  performUnitOfWork (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  workLoopSync (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  renderRootSync (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  performWorkOnRoot (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js)
  performWorkOnRootViaSchedulerTask (node_modules\react-native\Libraries\Renderer\implementations\ReactFabric-dev.js) 

Call Stack
  RCTView (<anonymous>)
  View (node_modules\react-native\Libraries\Components\View\View.js)
  CameraScreen (app\camera.tsx)
  WrappedScreenComponent (node_modules\expo-router\build\useScreens.js)
  BaseRoute (node_modules\expo-router\build\useScreens.js)
  SceneView (node_modules\@react-navigation\core\lib\module\SceneView.js)
  render (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  routes.reduce$argument_0 (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  reduce (<native>)
  useDescriptors (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  useNavigationBuilder (node_modules\@react-navigation\core\lib\module\useNavigationBuilder.js)
  NativeStackNavigator (node_modules\expo-router\build\fork\native-stack\createNativeStackNavigator.js)
  <anonymous> (node_modules\expo-router\build\layouts\withLayoutContext.js)
  Object.assign$argument_0 (node_modules\expo-router\build\layouts\StackClient.js)
  RootLayout (app\_layout.tsx)
  WrappedScreenComponent (node_modules\expo-router\build\useScreens.js)
  BaseRoute (node_modules\expo-router\build\useScreens.js)
  SceneView (node_modules\@react-navigation\core\lib\module\SceneView.js)
  render (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  routes.reduce$argument_0 (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  reduce (<native>)
  useDescriptors (node_modules\@react-navigation\core\lib\module\useDescriptors.js)
  useNavigationBuilder (node_modules\@react-navigation\core\lib\module\useNavigationBuilder.js)
  Content (node_modules\expo-router\build\ExpoRoot.js)
  ContextNavigator (node_modules\expo-router\build\ExpoRoot.js)
  ExpoRoot (node_modules\expo-router\build\ExpoRoot.js)
  App (node_modules\expo-router\build\qualified-entry.js)
  WithDevTools (node_modules\expo\src\launch\withDevTools.tsx)
 ERROR  SyntaxError: C:\Camera App\services\imagePreprocessing.ts: Unexpected token (82:1)

  80 |   return result.uri;
  81 | }
> 82 |  *
     |  ^
  83 |  * @param uri - Source image URI
  84 |  * @param region - Crop region in pixels
  85 |  * @returns URI of the cropped image
    at constructor (C:\Camera App\node_modules\@babel\parser\lib\index.js:365:19)
    at TypeScriptParserMixin.raise (C:\Camera App\node_modules\@babel\parser\lib\index.js:6599:19)
    at TypeScriptParserMixin.unexpected (C:\Camera App\node_modules\@babel\parser\lib\index.js:6619:16)
    at TypeScriptParserMixin.parseExprAtom (C:\Camera App\node_modules\@babel\parser\lib\index.js:11442:22)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Camera App\node_modules\@babel\parser\lib\index.js:11081:23)
    at TypeScriptParserMixin.parseUpdate (C:\Camera App\node_modules\@babel\parser\lib\index.js:11066:21)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Camera App\node_modules\@babel\parser\lib\index.js:11046:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Camera App\node_modules\@babel\parser\lib\index.js:9837:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Camera App\node_modules\@babel\parser\lib\index.js:10899:61)
    at TypeScriptParserMixin.parseExprOps (C:\Camera App\node_modules\@babel\parser\lib\index.js:10904:23)
    at TypeScriptParserMixin.parseMaybeConditional (C:\Camera App\node_modules\@babel\parser\lib\index.js:10881:23)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Camera App\node_modules\@babel\parser\lib\index.js:10831:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Camera App\node_modules\@babel\parser\lib\index.js:9786:20)
    at TypeScriptParserMixin.parseExpressionBase (C:\Camera App\node_modules\@babel\parser\lib\index.js:10784:23)
    at C:\Camera App\node_modules\@babel\parser\lib\index.js:10780:39
    at TypeScriptParserMixin.allowInAnd (C:\Camera App\node_modules\@babel\parser\lib\index.js:12421:16)
    at TypeScriptParserMixin.parseExpression (C:\Camera App\node_modules\@babel\parser\lib\index.js:10780:17)
    at TypeScriptParserMixin.parseStatementContent (C:\Camera App\node_modules\@babel\parser\lib\index.js:12895:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Camera App\node_modules\@babel\parser\lib\index.js:9508:18)
    at TypeScriptParserMixin.parseStatementLike (C:\Camera App\node_modules\@babel\parser\lib\index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (C:\Camera App\node_modules\@babel\parser\lib\index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Camera App\node_modules\@babel\parser\lib\index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (C:\Camera App\node_modules\@babel\parser\lib\index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (C:\Camera App\node_modules\@babel\parser\lib\index.js:12622:10)
    at TypeScriptParserMixin.parseTopLevel (C:\Camera App\node_modules\@babel\parser\lib\index.js:12612:25)
    at TypeScriptParserMixin.parse (C:\Camera App\node_modules\@babel\parser\lib\index.js:14488:25)
    at TypeScriptParserMixin.parse (C:\Camera App\node_modules\@babel\parser\lib\index.js:10126:18)
    at parse (C:\Camera App\node_modules\@babel\parser\lib\index.js:14501:26)
    at parser (C:\Camera App\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Camera App\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (C:\Camera App\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (C:\Camera App\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (C:\Camera App\node_modules\gensync\index.js:251:28)
    at sync (C:\Camera App\node_modules\gensync\index.js:89:14)
    at stopHiding - secret - don't use this - v1 (C:\Camera App\node_modules\@babel\core\lib\errors\rewrite-stack-trace.js:47:12)
    at Object.transformSync (C:\Camera App\node_modules\@babel\core\lib\transform.js:40:76)
    at parseWithBabel (C:\Camera App\node_modules\@expo\metro-config\build\transformSync.js:75:18)
    at transformSync (C:\Camera App\node_modules\@expo\metro-config\build\transformSync.js:54:16)
    at Object.transform (C:\Camera App\node_modules\@expo\metro-config\build\babel-transformer.js:132:58)
    at transformJSWithBabel (C:\Camera App\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:481:47)
    at Object.transform (C:\Camera App\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:598:12)
    at Object.transform (C:\Camera App\node_modules\@expo\metro-config\build\transform-worker\transform-worker.js:178:19)
    at transformFile (C:\Camera App\node_modules\metro\src\DeltaBundler\Worker.flow.js:67:36)
    at Object.transform (C:\Camera App\node_modules\metro\src\DeltaBundler\Worker.flow.js:42:10)
    at execFunction (C:\Camera App\node_modules\jest-worker\build\workers\threadChild.js:167:17)
    at execHelper (C:\Camera App\node_modules\jest-worker\build\workers\threadChild.js:155:5)
› Stopped server